# paper-surf

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run_daily.py  run_paper_surf-gh-action.sh  setup_envs_temp.sh  uv_install.sh
.github/workflows/: daily-paper.yml
app/: __init__.py  embedder.py  fetcher.py  formatter.py  models.py  notifier.py  reader.py  recommender.py
data/: candidate_papers_2025-07-21.jsonl
