
[project]
name = "paper-surf"
version = "0.1.0"
description = "AI-powered academic paper recommendation system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "numpy>=1.24.3",
    "arxiv>=1.4.8",
    "bibtexparser>=1.4.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.2.2",
    "python-dotenv>=1.0.0",
    "ipdb",
    "pyzotero",
]

[tool.setuptools]
packages = ["app"]

[tool.uv]
dev-dependencies = []